--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>VSCS github web page </title>
   </head>
   <body>
-    <h1>VSCV it github</h1>
+    <h1>VSCV in github</h1>
   </body>
 </html>
