--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>VSCV in github</h1>
-    <a href="https://vscv.github.io/apply_twcc_to_solve_surface_inspection/" target="_blank">This slides</a>
+    <a href="https://vscv.github.io/apply_twcc_to_solve_surface_inspection/" target="_blank">TWCC@Inspection Slides</a>
   </body>
 </html>
