--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   </head>
   <body>
     <h1>VSCV in github</h1>
-    <a href="https://vscv.github.io/apply_twcc_to_solve_surface_inspection/" target="_blank">TWCC@Inspection Slides</a>
+   <div style="width: 1056px; height: 600px;">
+						<ul>
+							<h1>Reference </h1>
+							<ul>
+								<li><a href="https://www.twcc.ai/" target="_blank">TWCC</a></li>
+								<li><a href="https://iservice.nchc.org.tw/" target="_blank">NCHC iService</a></li>
+								<li><a href="https://vscv.github.io/apply_twcc_to_solve_surface_inspection/" target="_blank">TWCC@Inspection Slides</a></li>
+							</ul>
+						</ul>
+					</div>
   </body>
 </html>
