--- a/apply_twcc_to_solve_surface_inspection/index.html
+++ b/apply_twcc_to_solve_surface_inspection/index.html
@@ -60,7 +60,7 @@
                         <br>
                         <center>
                         AOI Task Force<br>
-                        James, Healthy, Kevin<br/>
+                        James, Healthy, Kevin, F-P, J-H<br/>
                         </center>
                     </div>
                     <aside class="notes">Here are presenters notes: Welcome to the workshop!</aside>
