--- a/apply_twcc_to_solve_surface_inspection/index.html
+++ b/apply_twcc_to_solve_surface_inspection/index.html
@@ -50,7 +50,7 @@
 			<div class="slides">
                 <section>
                     <div style="width: 1024; height: 500px">
-                        <h1>NCHC show csase</h1>
+                        <h1>NCHC show case</h1>
                             <br>
 						<h3>to automated surface inspection with TWCC and robot </h2>
                     </div>
