--- a/apply_twcc_to_solve_surface_inspection/index.html
+++ b/apply_twcc_to_solve_surface_inspection/index.html
@@ -102,7 +102,7 @@
                     Screening the surface by robot and inspecting within TWCC.
                     </p>
                     <div >
-                        <embed src="images/VID_20200207_113034.mp4" autostart="false" width="100%" />
+                        <embed src="images/VID_20200207_113034.mp4" autostart="false" height="480" width="660" />
                     </div>
                 </section>
                 
