--- a/apply_twcc_to_solve_surface_inspection/index.html
+++ b/apply_twcc_to_solve_surface_inspection/index.html
@@ -102,7 +102,7 @@
                     Screening the surface by robot and inspecting within TWCC.
                     </p>
                     <div >
-                        <embed src="images/VID_20200207_113034.mp4" autostart="false" height="480" width="660" />
+                        <embed id="emswf" src="images/VID_20200207_113034.mp4" play="false" flashvars="autoplay=false&;play=false" menu="false" hidden="true" loop="false"></embed>
                     </div>
                 </section>
                 
