--- a/foot/index.html
+++ b/foot/index.html
@@ -1,77 +1,40 @@
 <!doctype html>
-<html lang="en">
-
+<html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js – The HTML Presentation Framework</title>
-
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
-
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
 
-		<!-- Theme used for syntax highlighting of code -->
+		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
 	</head>
-
 	<body>
-
 		<div class="reveal">
-
-			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-                
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.001.jpeg">
-                </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.002.jpeg">
-                </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.003.jpeg">
-                </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.004.jpeg">
-                </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.005.jpeg">
-                </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.006.jpeg">
-                </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.007.jpeg">
-                </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.008.jpeg">
-                </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.009.jpeg">
-                </section>
+				<section>Slide 1</section>
+				<section>Slide 2</section>
 			</div>
-
 		</div>
 
 		<script src="dist/reveal.js"></script>
-		<script src="plugin/zoom/zoom.js"></script>
 		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/search/search.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
 		<script>
-
-			// Also available as an ES module, see:
-			// https://revealjs.com/initialization/
+			// More info about initialization & config:
+			// - https://revealjs.com/initialization/
+			// - https://revealjs.com/config/
 			Reveal.initialize({
-				controls: true,
-				progress: true,
-				center: true,
 				hash: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealZoom, RevealNotes, RevealSearch, RevealMarkdown, RevealHighlight ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
-
 		</script>
-
 	</body>
 </html>
