--- a/foot/index.html
+++ b/foot/index.html
@@ -29,7 +29,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
                 
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.001.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.001.jpeg"
+			 background-size: contain; background-repeat: no-repeat>
                 </section>
                 <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.002.jpeg">
                 </section>
