--- a/foot/index.html
+++ b/foot/index.html
@@ -30,7 +30,7 @@
 			<div class="slides">
                 
                 <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.001.jpeg"
-			 background-size: contain; background-repeat: no-repeat>
+			 background-size="contain" background-repeat="no-repeat">
                 </section>
                 <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.002.jpeg">
                 </section>
