--- a/foot/index.html
+++ b/foot/index.html
@@ -30,23 +30,23 @@
 			<div class="slides">
                 
                 <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.001.jpeg"
-			 background-size="contain" background-repeat="no-repeat">
+                    data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.002.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.002.jpeg" data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.003.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.003.jpeg" data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.004.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.004.jpeg" data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.005.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.005.jpeg" data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.006.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.006.jpeg" data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.007.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.007.jpeg" data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.008.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.008.jpeg" data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
-                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.009.jpeg">
+                <section data-background-image="jpgs/4th_動態足壓影像辨識-簡報0413v2-James.009.jpeg" data-background-size="contain" data-background-repeat="no-repeat">
                 </section>
 			</div>
 
