--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 								<li><a href="https://www.twcc.ai/" target="_blank">TWCC</a></li>
 								<li><a href="https://iservice.nchc.org.tw/" target="_blank">NCHC iService</a></li>
 								<li><a href="https://vscv.github.io/apply_twcc_to_solve_surface_inspection/" target="_blank">TWCC@Inspection Slides</a></li>
+								<li><a href="https://www.youtube.com/watch?v=pKIff6Hwk1Q" target="_blank"> [video]影像辨識結合協作機器人</a></li>
+								<li><a href="https://www.youtube.com/watch?v=sTLTBUdeIAg" target="_blank">[video]自動執行三維空間檢查</a></li>
 							</ul>
 						</ul>
 					</div>
